--- a/package.json
+++ b/package.json
@@ -20,13 +20,15 @@
   "dependencies": {
     "electron": "^4.0.0",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
-    "babel-core": "~7.0.0-bridge.0 ",
+    "@babel/cli": "~7.1.5",
+    "@babel/core": "~7.1.5",
+    "@babel/preset-react": "~7.0.0",
     "babel-eslint": "~8.2.6",
-    "babel-loader": "^7.1.4",
-    "babel-preset-react": "^6.24.1",
+    "babel-loader": "^~8.0.4",
     "css-loader": "^0.28.11",
     "electron-packager": "^12.0.1",
     "eslint": "^5.11.1",
