--- a/package.json
+++ b/package.json
@@ -18,14 +18,19 @@
   "author": "Ed Atrero",
   "license": "ISC",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "electron": "^4.0.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "16.7.0-alpha.2",
+    "react-dom": "16.7.0-alpha.2",
+    "regenerator": "^0.13.3",
+    "regenerator-runtime": "^0.13.1",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "@babel/cli": "~7.1.5",
     "@babel/core": "~7.1.5",
+    "@babel/plugin-transform-async-to-generator": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "~7.0.0",
     "babel-eslint": "~8.2.6",
     "babel-loader": "^~8.0.4",
