--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "author": "Ed Atrero",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^3.7.1",
+    "@material-ui/icons": "^3.0.1",
     "babel-polyfill": "^6.26.0",
     "electron": "^4.0.0",
     "react": "16.7.0-alpha.2",
